@@ -1,5 +1,8 @@
 RELEASE_NOTES for orcaUsbApp (Orca-Flash Camera USB Driver)
 ----------------------------------------------------
+R0.0.9:   2022-11-19   J. Vamosi
+          Fix crash on not available cameras when aquiring
+
 R0.0.8:   2022-05-12   J. Vamosi
           Restore serial number check for camera identification
 
